testsuite/tests/splice-imports/SI25.stderr
SI25.hs:16:13: error: [GHC-28914]
    • Stage error: ‘nestedCode’ is bound at stage {-1} but used at stage -2
      Hint: quoting [| nestedCode |] or an enclosing expression would allow the quotation to be used in an earlier stage
      From imports {imported from ‘SI25Helper’ at 0 at SI25.hs:6:1-24}
    • In the untyped splice: $(nestedCode "nested")
      In the untyped splice: $($(nestedCode "nested"))

